--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,9 @@ h1 {
   color: red;
 }
 
-a.Header {
-  text-decoration: none;
+.Header img {
+  max-width: 50vw;
+  margin: 30px;
 }
 
 a:visited h1 {
@@ -32,7 +33,7 @@ a:visited h1 {
 
 .Thumbnail {
   margin: 10px;
-  max-width: 30vw;
+  max-width: 25vw;
 }
 
 .Photo {
